feat(incremental): Kotlin + Java incremental compilation via subprocess workers
Replace per-build full recompiles with incremental compilation for both
languages, each backed by a small subprocess worker located in the CAS by
SHA (sideloaded via installLocalCas, pulled by `jk sync` from ~/.m2).

Kotlin:
- New :kotlin-compiler module wrapping the Build Tools API (Kotlin 2.4.0):
  KotlinCompilerWorker drives a snapshot-based incremental session (FIR
  runner) and streams ##JKKC: NDJSON; KotlincDriver forks it, KotlincRequest
  reshaped for the worker. Drops the kotlinc-subprocess strategy.
- KotlinWorkerSetup (CAS-by-SHA + jk.kotlin.worker.jar override) and
  KotlinBtaResolver (resolves the BTA closure + stdlib).

Java:
- 3-tier model mirroring Kotlin: .jstamp freshness -> action-cache CAS
  restore -> precise multi-pass incremental. ASM-based ABI hashing
  (ClassAbi) + forward-dep extraction (ClassDependencies) compute the dirty
  set; classpath ABI snapshots (JavaClasspathAbi) so a dependency bump
  recompiles only referencing sources. JavaIncrementalCompile orchestrates;
  constants/vanished classes fall back conservatively.
- Annotation-processor-aware incremental: :java-compiler worker runs javac
  in-process and captures generated-file -> originating-source provenance
  (Filer/Trees); WorkerJavac launches it. A per-project flag detects
  source-generating processors via the orphan signal (so Lombok never needs
  the worker), and a provenance-arity gate keeps isolating processors
  incremental while aggregating ones stay full -- conservative on doubt,
  never stale.
- PROCESSOR scope activated end-to-end: LockOrchestrator now resolves+tags
  it, CompileRequest carries a processorPath, javac gets -processorpath, and
  the action key / .jstamp / canIncrement all track processor changes.

Shared:
- JkWorkerSync syncs all three workers; SyncCommand reports present/fetched.
- Remove the dormant single-pass IncrementalCompile/IncrementalCompiler/
  FullRebuildCompiler/